fix: added semicolon in gap property

--- a/movie-catalog/src/pages/Movie.css
+++ b/movie-catalog/src/pages/Movie.css
@@ -28,17 +28,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 0.4rem
+  gap: 0.4rem;
 }
 
 .movie-detail .tagline {
   text-align: center;
   font-size: 1.3rem;
   margin-bottom: 2rem;
+  padding: 0px 0.5rem;
 }
 
 .movie-detail .info {
   margin-bottom: 1.5rem;
+  padding: 0px 0.5rem;
 }
 
 .movie-detail .info h3 {
